# jobly

backend/: .gitignore  commands.sh  pyproject.toml
backend/api/: models.py  serializer.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py  0002_job.py  0003_delete_job_delete_user.py
backend/app/: secrets.example.py  settings.py
backend/backend/: settings.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/api/auth/[…nextauth]/: route.ts
frontend/pages/: _app.tsx  index.tsx  profile.tsx
frontend/pages/api/auth/: [...nextauth].js
