[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "cryptography>=43.0.3",
    "dj-rest-auth[with-social]==4.0.0",
    "django-allauth==0.52.0",
    "django-cors-headers==4.1.0",
    "django>=4.2.16",
    "djangorestframework-simplejwt==5.2.2",
    "djangorestframework==3.14.0",
    "psycopg2>=2.9.10",
    "setuptools>=75.3.0",
]
